--- a/webapi/package.json
+++ b/webapi/package.json
@@ -19,8 +19,12 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/joi": "^17.2.3",
     "@types/knex": "^0.16.1",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "eslint": "^9.18.0",
@@ -32,7 +36,12 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-errors": "^2.0.0",
+    "joi": "^17.13.3",
     "knex": "^3.1.0",
-    "mysql2": "^3.11.5"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.11.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
