--- a/webapi/docker-compose.db.yml
+++ b/webapi/docker-compose.db.yml
@@ -7,6 +7,8 @@ services:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+    command:
+      - --default-time-zone='-03:00'
     ports:
       - "${DB_PORT}:3306"
     volumes:
