--- a/webapi/package.json
+++ b/webapi/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^29.5.14",
     "@types/joi": "^17.2.3",
     "@types/knex": "^0.16.1",
+    "@types/luxon": "^3.4.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.2",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -39,6 +40,7 @@
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "knex": "^3.1.0",
+    "luxon": "^3.5.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.5",
     "swagger-jsdoc": "^6.2.8",
